--- a/ExpressDemo/views/index.hbs
+++ b/ExpressDemo/views/index.hbs
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="hero-unit">
+	<h1>欢迎来到Microblog</h1>
+	<p>Microblog是一个基于Node.js的微博系统。</p>
+	<p>
+		<a class="btn btn-primary btn-large" href="/login">登录</a>
+		<a class="btn btn-large" href="/reg">立即注册</a>
+	</p>
+</div>
