--- a/ExpressDemo/views/layout.hbs
+++ b/ExpressDemo/views/layout.hbs
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='../public/stylesheets/bootstrap.min.css' />
-	<style type="text/css>
-		body {
-			padding-top: 60px;
-			padding-bottom: 40px;
-		}
-	</style>
-  </head>
-  <body>
-	  div.navbar.navbar-fixed-top
-    {{{body}}}
-  </body>
-  <script src="../public/javascripts/jquery.min.js"></script>
-  <script src="../public/javascripts/bootstrap.min.js></script>
+	<head>
+		<title>{{title}}</title>
+		<link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+		<style type="text/css">
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse"  data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<a class="brand" href="/">Microblog</a>
+					<div class="nav-collapse">
+						<ul class="nav">
+							<li><a href="/">首页</a></li>
+							<li><a href="/login">登入</a></li>
+							<li><a href="/reg">注册</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="container" class="container">
+			{{{body}}}
+			<hr/>
+			<footer>
+				<p><a href="https://uglymelon007.github.io" target="_blank">BYVoid</a>2016</p>
+			</footer>
+		</div>
+	</body>
+	<script src="/javascripts/jquery.min.js"></script>
+	<script src="/javascripts/bootstrap.min.js></script>
 </html>
